--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 			<h1>Jack Handey's Deep Thoughts</h1>
 		</header>
 		<main>
-			<blockquote class="quotes">hello</blockquote>
+			<blockquote class="quotes"></blockquote>
 		</main>
 		<footer>
-			<button type="button" class="btn btn-primary" id="quote">Another Thought</button><button class="btn btn-primary">Share on Twitter</button>
+			<button type="button" class="btn btn-primary" id="quote">Another Thought</button>
+			<a target="_blank" href="https://twitter.com/intent/tweet?text=I%20love%20reading%20these%20Deep%20Thoughts!%20Thanks%20for%20the%20random%20quote%20generator!&via=ms_ellerz&url=http%3A%2F%2Fbit.ly%2F1MGd9CX">
+			<button class="btn btn-primary" id="twitter">Share on Twitter</button></a>
 		</footer>
+
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
 
 		<script>
 
@@ -37,14 +40,15 @@
 					"I believe you should live each day as if it is your last, which is why I don't have any clean laundry because, come on, who wants to wash clothes on the last day of their life?",
 					"My young brother asked me what happens after we die. I told him we get buried under a bunch of dirt and worms eat our bodies. I guess I should have told him the truth--that most of us go to Hell and burn eternally--but I didn't want to upset him.",
 					"When I go to heaven, I want to see my grandpa again. But he better have lost the nose hair and the old-man smell.",
-					"Often, when I am reading a good book, I stop and thank my teacher. That is, I used to, until she got an unlisted number."
+					"Often, when I am reading a good book, I stop and thank my teacher. That is, I used to, until she got an unlisted number.",
+					"To me, it's a good idea to always carry two sacks of something when you walk around. That way, if anybody says, 'Hey, can you give me a hand?' You can say, 'Sorry, got these sacks.'"
 					];
 
-					console.log(typeof quotes)
 					var randomQuote = quotes[Math.floor(Math.random() * quotes.length)];
 					$('blockquote.quotes').html(randomQuote);
 				}
-			});
+
+			})
 		</script>
 	</body>
 </html>
