--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
 	<head>
+		<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>Deep Thoughts</title>
+
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link type="text/css" rel="stylesheet" href="style.css">
 		<link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+
 	</head>
+	
 	<body>
 		<header>
 			<h1>Jack Handey's Deep Thoughts</h1>
