--- a/index.html
+++ b/index.html
@@ -21,18 +21,13 @@
 		</main>
 		<footer>
 			<button type="button" class="btn btn-primary" id="quote">Another Thought</button>
-			<!-- <a target="_blank" href="https://twitter.com/intent/tweet?text=I%20love%20reading%20these%20Deep%20Thoughts!%20Thanks%20for%20the%20random%20quote%20generator!&via=ms_ellerz&url=http%3A%2F%2Fbit.ly%2F1MGd9CX"> -->
 			<button class="btn btn-primary" id="twitter">Share on Twitter</button>
-
 		</footer>
-
-	<!-- <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 		<script>
-
 			$(document).ready(function() {
 
 				var quotes = [
@@ -67,7 +62,7 @@
 				function twitter() {
 					tweetThis = 'http://twitter.com/home/?status=' + randomQuote;
 					// window.location.href = tweetThis;
-					window.open(tweetThis, '_blank');
+					window.open(tweetThis, '_blank', 'width = 400, height = 300');
 				}
 
 			})
